Adding support to enable or disable Peers and/or Snatched history in MySQL

--- a/install/radiance.conf
+++ b/install/radiance.conf
@@ -31,6 +31,8 @@ schedule_interval   = 3
 
 readonly            = false
 load_peerlists      = false
+peers_history       = true
+snatched_history    = true
 daemonize           = false
 syslog_path         = radiance.log
 syslog_level        = info
