Adding full support for Anonymous use of the tracker, disabled by default, but can be enabled, explanation how to make it work in the radiance.conf file

--- a/install/radiance.conf
+++ b/install/radiance.conf
@@ -30,12 +30,19 @@ reap_peers_interval = 1800
 schedule_interval   = 3
 
 readonly            = false
+anonymous           = false
+# If using anonymous function, create a user in users_main with a torrent_pass with the anonymous_password,
+# which will be the anonymous user, for tracking
+anonymous_password  = 00000000000000000000000000000000
+clear_peerlists     = true
 load_peerlists      = false
 peers_history       = true
+files_peers         = true
 snatched_history    = true
 daemonize           = false
 syslog_path         = radiance.log
 syslog_level        = info
 pid_file            = radiance.pid
+daemon_user         = root
 
 [tester]
