Allow to use custom HTTP header name instead of X-Forwarded-For

--- a/install/radiance.conf
+++ b/install/radiance.conf
@@ -10,6 +10,9 @@ max_read_buffer     = 4096
 connection_timeout  = 10
 # Keepalive is mostly useful if the tracker runs behind reverse proxies
 keepalive_timeout   = 0
+# Override the client IP with the HTTP header provided by a proxy or load balancer (nginx, etc.).
+# Disabled by default
+real_ip_header      = X-Forwarded-For
 
 announce_interval   = 1800
 max_request_size    = 4096
