--- a/install/radiance.conf
+++ b/install/radiance.conf
@@ -3,6 +3,11 @@
 # A # anywhere else is treated like any other character
 
 [tracker]
+# If you want you can bind a single interface, if the bind option is not
+# specified or * all the interfaces will listen for incoming connections.
+# To listen on multiple interfaces separate them with a space ("0.0.0.0 ::").
+# To listen on Unix socket set this value to "unix:/tmp/radiance.sock" (without quotes).
+listen_host         = *
 listen_port         = 34000
 max_connections     = 128
 max_middlemen       = 20000
