--- a/install/radiance.conf
+++ b/install/radiance.conf
@@ -13,8 +13,10 @@ max_connections     = 128
 max_middlemen       = 20000
 max_read_buffer     = 4096
 connection_timeout  = 10
+
 # Keepalive is mostly useful if the tracker runs behind reverse proxies
 keepalive_timeout   = 0
+
 # Override the client IP with the HTTP header provided by a proxy or load balancer (nginx, etc.).
 # Disabled by default
 real_ip_header      = X-Forwarded-For
@@ -26,7 +28,7 @@ numwant_limit       = 50
 mysql_host          =
 mysql_username      =
 mysql_password      =
-mysql_db            = 
+mysql_db            =
 
 # The passwords must be 32 characters and match the Gazelle config
 report_password     = 00000000000000000000000000000000
@@ -47,10 +49,12 @@ load_peerlists      = false
 peers_history       = true
 files_peers         = true
 snatched_history    = true
-daemonize           = false
-syslog_path         = radiance.log
+daemonize           = true
+
+# Log levels are:
+# off, fatal, error, warning, info, debug and trace
 syslog_level        = info
-pid_file            = radiance.pid
-daemon_user         = root
+syslog_path         = /var/log/radiance/radiance.log
+pid_file            = /var/run/radiance.pid
 
 [tester]
